# Crucible

./: .gitattributes  .gitignore  LICENSE  README.md  amplify.yml  bimode_diag_20260605T142320Z.txt  bimode_diag_20260605T151346Z.txt  bimode_diag_20260605T161247Z.txt  crucible-cc-brief-fix-01-branch-prediction.md  crucible-corrections-framing-fix-brief.md  demo-06-plan.md  demo-07-hostile-cross-read-findings.md  demo-07-plan_1.md  pre-demo-5-bench-code-review-findings.md  pre-demo-5-hostile-cross-read-findings.md  pre-demo-5-json-audit-findings.md  pre-demo-5-lighthouse-findings.md  pre-demo-5-mobile-findings.md  pre-demo-5-review-tasks.md  pre-demo-5-review-tasks_1.md  uop_diag_20260605T112839Z.txt  uop_diag_20260605T113736Z.txt  uop_diag_20260605T115352Z.txt
.claude/: settings.json
bench/: CMakeLists.txt
bench/calibration-notes/: README.md  rung3a-arena.txt  rung3a-malloc.txt  rung3b-arena.txt  rung3b-malloc.txt  rung4a-arena.txt  rung4a-malloc.txt  rung4b-arena.txt  rung4b-malloc.txt
bench/calibration-notes/06-aos-vs-soa-pilot/: README.md  pilot.cpp  results.csv
bench/calibration-notes/06-aos-vs-soa-preflight/: README.md
bench/common/: affinity.h  bs_bench_harness.h  histogram.h  machine_info.h  perf_wrapper.h  stats.h  tsc_utils.h  warmup_verify.h
bench/demos/01-branch-prediction/: CMakeLists.txt  README.md  benchmark.cpp
bench/demos/02-false-sharing/: CMakeLists.txt  README.md  check_codegen.sh  false_sharing_pnl.cpp
bench/demos/03-simd-blackscholes/: CMakeLists.txt  README.md  avx2_fma_intrinsics.cpp  benchmark.cpp  dump_asm.sh  inputs.cpp  inputs.h  poly.h  scalar_libm.cpp  scalar_poly.cpp  sse2_intrinsics.cpp  verify.cpp
bench/demos/03-simd-blackscholes/asm/: avx2_fma_intrinsics.s  scalar_libm.s  scalar_poly.s  sse2_intrinsics.s
bench/demos/04-spsc-queue/: CMakeLists.txt  README.md  benchmark.cpp  spsc_queue.h  tick.h
bench/demos/05-allocators/: CMakeLists.txt  README.md  background_pressure.h  benchmark.cpp  order.h  risk_check.h
bench/demos/05-allocators/allocators/: arena_batch_allocator.h  freelist_return_allocator.h  malloc_allocator.h
bench/demos/06-aos-vs-soa/: CMakeLists.txt  README.md  benchmark.cpp  kernels.h  record.h  verify.cpp
bench/demos/07-no-crossover/: CMakeLists.txt  README.md  benchmark.cpp  calibrate.sh
bench/demos/08-sorting-shootout/: CMakeLists.txt  README.md  benchmark.cpp  inputs.h  radix.h
bench/demos/09-arm-neon/: CMakeLists.txt  autovec.cpp  benchmark.cpp  dump_asm.sh  inputs.h  neon_intrinsics.cpp  poly_neon.h  scalar_libm.cpp  scalar_poly.cpp  verify.cpp
bench/demos/09-arm-neon/asm/: autovec.s  neon_intrinsics.s  scalar_libm.s  scalar_poly.s
bench/demos/quantum-classical-baseline/: CMakeLists.txt  README.md  benchmark.cpp
bench/pilot/08-sorting-shootout/: demo08_pilot  demo08_pilot.cpp
bench/pilot/09-arm-neon/: CMakeLists.txt  README.md  dump_asm.sh  pilot_blackscholes.cpp  poly_neon.h  run_addendum.sh  run_pilot.sh  verify_addendum_codegen.sh
bench/pilot/09-arm-neon/asm/: pilot_full.s  price_autovec.s  price_neon.s  price_scalar.s  price_scalar_fullpoly.s  price_scalar_poly.s
bench/pilot/09-arm-neon/pilot_logs/: a1_perf_stat.txt  a2_neon_16k.txt  a2_neon_1m.txt  a2_scalar_16k.txt  a2_scalar_1m.txt  a3_autovec_16k.txt  a4_soak.txt  addendum_autovec_16k.txt  addendum_autovec_1m.txt  addendum_scalar_fullpoly_16k.txt  addendum_scalar_fullpoly_1m.txt  addendum_scalar_poly_16k.txt  addendum_scalar_poly_1m.txt
bench/pilots/07-flatmap-vs-hashmap-stage1/: CMakeLists.txt  README.md  stage1.cpp
bench/pilots/07-flatmap-vs-hashmap-stage2/: CMakeLists.txt  README.md  stage2.cpp
bench/scripts/: assemble_overload_modes.py  assemble_results.py  assemble_results_03.py  assemble_results_04.py  assemble_results_05.py  assemble_results_06.py  assemble_results_07.py  assemble_results_08.py  assemble_results_09.py  bs_utils.py  check_volatile_codegen.sh  diag_04_spike_16mhz.sh  lib.sh  pi-preflight.sh  pi-rig-setup.sh  repair_sweep_json.py  run_all.sh  run_one.sh  run_preflight.sh  stats_utils.py  test_stats_utils.py  verify_boost_off.sh
bench/scripts/03/: uop_diag.sh
bench/scripts/04/: bimode_diag.sh  set_performance.sh  verify_phase0.sh
bench/tests/: CMakeLists.txt  test_stats.cpp
docs/: corpus-rederivation-cross-read-findings.md  crucible-handover.md  demo-03-uop-diagnostic-spec.md  demo-06-pre-merge-review-findings.md  demo-07-plan_1.md  demo-07-pre-merge-review-findings.md  demo-08-hostile-cross-read-findings.md  demo-08-json-audit-findings.md  demo-08-plan.md  demo-08-pre-merge-review-findings.md  demo-09-arm-neon-pilot-scope.md  demo-09-hostile-cross-read-findings.md  demo-09-plan.md  pre-demo-5-json-audit-findings.md  pre-demo-5-review-tasks.md  pre-demo-5-site-code-review-findings.md  pre-demo-6-hostile-cross-read-findings.md  quantum-measuring-the-gap-scope.md
docs/briefs/: 01-branch-prediction-final-edits-brief.md  01-branch-prediction-v1.1-brief.md  02-false-sharing-remediation-brief.md  02-false-sharing-remediation-brief_1.md  02c-false-sharing-final-edits-brief.md  02d-false-sharing-prose-clarifications-brief.md  03-simd-blackscholes-brief.md  04-spsc-queue-brief.md  05-allocators-brief.md  06-aos-vs-soa-brief.md  06-chart-component-extension-brief.md  07-chart-component-check-brief_1.md  07-flatmap-vs-hashmap-brief.md  07-no-crossover-brief.md  BRIEF-02-fix.md  BRIEF.md  boost-off-corpus-hostile-cross-read-findings.md  crucible-02-false-sharing-fix-brief.md  crucible-boost-detection-acpi-cpufreq-fix-brief.md  crucible-boost-off-recapture-brief.md  crucible-cc-brief-demo-2-false-sharing.md  crucible-demo-01-disasm-guard-fix-brief.md  crucible-demo-04-fixup-brief.md  crucible-demo-04-refinement-brief.md  crucible-demo-04-sweep-json-fix-brief.md  demo-06-teaser-brief.md  (+22 more)
mobile-screenshots/: deep-inspect.json  diagnostics.json
quantum/: capture.py  grover_pilot.py  pick_layout.py  requirements.txt
site/: next.config.mjs  package-lock.json  package.json
tools/: deep-inspect.js  mobile-screenshots.js  parse_perf.py  perf_capture.sh  prepare_bench.sh  sanity_check.py  test_parse_perf.py
(+146 files in other folders)
